<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/balanceHistoryFragment"
        android:icon="@drawable/ic_history"
        android:title="@string/nav_bar_balance_history" />

    <item
        android:id="@+id/stocksFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/nav_bar_stocks" />

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_bar_home"
        />

    <item
        android:id="@+id/buyStocksFragment"
        android:icon="@drawable/ic_buy"
        android:title="@string/nav_bar_buy_stocks" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_bar_settings" />
</menu>