<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/signUpFragment"
    tools:layout="@layout/sign_up_fragment"
    tools:context=".SignUpFragment">

    <data>
        <variable name="viewmodel" type="com.financeapp.viewmodels.SignUpViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/primaryColor"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progressBarSignUp"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginEntry"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="150dp"
            android:hint="@string/loginEntry"
            android:textColorHint="@color/primaryTextColor"
            app:boxStrokeWidth="2dp"
            app:boxStrokeColor="@color/secondaryLightColor"
            app:hintTextColor="@color/secondaryLightColor">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewmodel.login}"
                android:textColor="@color/primaryTextColor"
                android:textCursorDrawable="@null"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstNameEntry"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/loginEntry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="25dp"
            android:hint="@string/first_name"
            android:textColorHint="@color/primaryTextColor"
            app:boxStrokeWidth="2dp"
            app:boxStrokeColor="@color/secondaryLightColor"
            app:hintTextColor="@color/secondaryLightColor">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewmodel.firstName}"
                android:textColor="@color/primaryTextColor"
                android:textCursorDrawable="@null"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastNameEntry"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/firstNameEntry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="25dp"
            android:textColorHint="@color/primaryTextColor"
            android:hint="@string/last_name"
            app:boxStrokeWidth="2dp"
            app:boxStrokeColor="@color/secondaryLightColor"
            app:hintTextColor="@color/secondaryLightColor">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewmodel.lastName}"
                android:textColor="@color/primaryTextColor"
                android:textCursorDrawable="@null"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailEntry"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/lastNameEntry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="25dp"
            android:hint="@string/emailEntry"
            android:textColorHint="@color/primaryTextColor"
            app:boxStrokeWidth="2dp"
            app:boxStrokeColor="@color/secondaryLightColor"
            app:hintTextColor="@color/secondaryLightColor">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryTextColor"
                android:text="@={viewmodel.email}"
                android:inputType="textEmailAddress"
                android:textCursorDrawable="@null"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordEntry"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/emailEntry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="25dp"
            android:hint="@string/passwordEntry"
            android:textColorHint="@color/primaryTextColor"
            app:boxStrokeWidth="2dp"
            app:boxStrokeColor="@color/secondaryLightColor"
            app:hintTextColor="@color/secondaryLightColor"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/primaryTextColor">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryTextColor"
                android:text="@={viewmodel.password}"
                android:inputType="textPassword"
                android:textCursorDrawable="@null"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/passwordEntry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="25dp"
            android:textColor="@color/secondaryTextColor"
            android:text="@string/signUpButton"
            android:onClick="@{()->viewmodel.onSignUpClick()}"
            app:backgroundTint="@color/secondaryColor"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
