<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loginFragment"
    tools:layout="@layout/login_fragment"
    tools:context=".LoginFragment">

    <data>
        <variable name="viewmodel" type="com.financeapp.viewmodels.LoginViewModel"/>
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/primaryColor">

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progressBarLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginEntry"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/loginEntry"
            android:textColorHint="@color/primaryTextColor"
            app:boxStrokeWidth="2dp"
            app:boxStrokeColor="@color/secondaryLightColor"
            app:hintTextColor="@color/secondaryLightColor">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/primaryTextColor"
                android:inputType="textPersonName"
                android:text="@={viewmodel.login}"
                android:textCursorDrawable="@null"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordEntry"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/loginEntry"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp"
            android:hint="@string/passwordEntry"
            android:textColorHint="@color/primaryTextColor"
            app:boxStrokeWidth="2dp"
            app:boxStrokeColor="@color/secondaryLightColor"
            app:hintTextColor="@color/secondaryLightColor"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/primaryTextColor">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/primaryTextColor"
                android:inputType="textPassword"
                android:text="@={viewmodel.password}"
                android:textCursorDrawable="@null"/>
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.button.MaterialButton
            android:id="@+id/logInButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/passwordEntry"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp"
            android:onClick="@{() -> viewmodel.login()}"
            android:text="@string/logInButton"
            android:textColor="@color/secondaryTextColor"
            app:backgroundTint="@color/secondaryColor"/>


        <TextView
            android:id="@+id/signUpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="150dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/signUpText"
            android:textColor="@color/primaryTextColor"
            android:textSize="15sp"
            android:textStyle="bold"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>