<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/stocksFragment"
    tools:layout = "@layout/stocks_fragment"
    tools:context=".StocksFragment">

    <data>
        <variable name="viewmodel" type="com.financeapp.viewmodels.StocksViewModel"/>
    </data>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryColor">


        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progressBarStocks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/stockFrame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_frame_balance"
            android:layout_margin="15dp"
            android:padding="20dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/stockText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/stockFrame"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/secondaryTextColor"
                android:textStyle="bold"
                android:textSize="40sp"
                android:text="@string/stock"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/stockSymbolEntryLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/stockText"
                android:textColorHint="@color/secondaryTextColor"
                android:hint="@string/stock_symbol">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondaryTextColor"
                    android:text="@={viewmodel.stockSymbol}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/findButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/stockSymbolEntryLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/rounded_button"
                android:layout_marginTop="20dp"
                android:width="200dp"
                android:text="@string/find"
                android:textColor="@color/primaryTextColor"
                android:onClick="@{()-> viewmodel.requestStockInfo()}"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.anychart.AnyChartView
            android:id="@+id/stockChart"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginBottom="70dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stockFrame"
            android:visibility="invisible">

        </com.anychart.AnyChartView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>