<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/buyStockFragment"
    >

    <data>
        <variable name="viewmodel" type="com.financeapp.viewmodels.BuyStocksViewModel"/>
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryColor">

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progressBarBuy"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_centerHorizontal="true"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/buyStockFrame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@drawable/rounded_frame_balance"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingBottom="20dp"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/buyStockText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buy_stock"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/secondaryTextColor"
                android:textStyle="bold"
                android:textSize="40sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/amountEntryLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buyStockText"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:textColorHint="@color/secondaryTextColor"
                android:hint="@string/amount"
                app:backgroundTint="@color/primaryDarkColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amountEntry"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@={viewmodel.stockAmount}"
                android:textColor="@color/secondaryTextColor"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/stockSymbolEntryLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/stock_symbol"
                android:textColorHint="@color/secondaryTextColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/amountEntryLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/stockSymbol"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@={viewmodel.stockName}"
                    android:textColor="@color/secondaryTextColor" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buyStockButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:layout_margin="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/stockSymbolEntryLayout"
                android:onClick="@{() -> viewmodel.buyStock()}"
                android:text="@string/buy"
                android:textColor="@color/primaryTextColor"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/refillFrame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_frame_balance"
            android:layout_margin="10dp"
            android:paddingBottom="20dp"
            app:layout_constraintTop_toBottomOf="@id/buyStockFrame"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/refillText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:paddingTop="20dp"
                android:text="@string/refill"
                android:textColor="@color/secondaryTextColor"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/refillEntryLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/refillText"
                android:hint="@string/amount"
                android:textColorHint="@color/secondaryTextColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/refillEntry"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@={viewmodel.refillAmount}"
                    android:textColor="@color/secondaryTextColor"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/refillButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:text="@string/refill"
                android:onClick="@{() -> viewmodel.refill()}"
                android:textColor="@color/primaryTextColor"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/refillEntryLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>